--- a/angebote.html
+++ b/angebote.html
@@ -196,7 +196,7 @@ Dies führte mich immer zu sehr wertvollen Begegnungen, die über die Forschung 
 </div>
 	<div class="w3-display-container" style="width:100%">
 	<img src="img/dias.jpg" alt="Strati" style="width:100%">
-	<div class="w3-display-bottomright w3-padding-medium w3-opacity w3-white"> Foto: Laura Trazic
+	<div class="w3-display-bottomright w3-padding-medium w3-opacity w3-white"> Foto: Andreas Thuy
     </div>
 		<h3 class="w3-left-align">Nachlass & Provinienz</h3>
 	 	<p class="w3-justify">Vor der Digitalisierung produzierte ein Architekturbüro unzählige Akten in Papierform. In manchen Fällen entsorgen die Urheber selbst noch im hohen Alter wertvolles Material ohne den Wert der eigenen Arbeit in einem weiteren Kontext einschätzen zu können. Schnell wird voreilig etwas weggeworfen oder geschreddert…So geht oft wertvolles historisches Material verloren. Daher biete ich archivische Bewertung und Beratung zum Umgang von Nachlässen im Zusammenhang mit Architektur.</p> 
@@ -276,6 +276,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
