--- a/angebote.html
+++ b/angebote.html
@@ -182,7 +182,7 @@
 <!-- Historische Forschung -->
 		<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="historische">
     <!-- Banner -->
-	<img src="img/historische.jpg" alt="Strati" style="width:80%">
+	<img src="img/historisch.jpg" alt="historisch" style="width:80%">
 		<h3 class="w3-left-align">Historische Forschung</h3>
 		<p class="w3-justify">Sie wollen mehr über die Geschichte eines Bauwerkes erfahren als Grundlage für eine Sanierung? Oder möchten Sie das Gebäude (Kirche, Firmensitz, Wohnhaus...) einem breiteren Publikum vorstellen? Oder seine Geschichte für die Nachwelt festhalten und damit für seine Erhaltung sorgen?</p> 
 		<p class="w3-justify">Für meine Quellen suche ich neben dokumentarischem Material auch bewusst Gespräche mit Zeitzeugen. Aussagen - soweit möglich - werden geprüft und oft sind sie die entscheidenden Puzzlestücke, um ein Gebäude aufzuschlüsseln. Wie lebt es sich in dem Gebäude? Welche Probleme gab und gibt es? Wer waren die entscheidenden Akteure bei der Errichtung?
@@ -279,6 +279,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
