--- a/angebote.html
+++ b/angebote.html
@@ -205,6 +205,12 @@ Dies führte mich immer zu sehr wertvollen Begegnungen, die über die Forschung 
 			
 			<div class="w3-display-container" style="width:100%">
 		<h3 class="w3-left-align">Nachlass & Provinienz</h3>
+		 <div class="w3-panel w3-leftbar w3-light-grey">
+  <p class="w3-xlarge w3-serif">
+  <i>«Wie Objekte weitergegeben werden, hat mit Geschichtenerzählen zu tun. Ich gebe dir das, weil ich dich liebe. Oder weil man es mir gegeben hat. […] Weil du darauf achtgeben wirst. Weil es dein Leben komplizieren wird. Vermächtnisse erzählen keine einfachen Geschichten. Woran erinnert man sich, was wird vergessen?»
+</i></p>
+  <p>Edmund de Waal, Der Hase mit den Bernsteinaugen, Wien 2011, S. 26.</p>
+</div> 
 	 	<p class="w3-justify">Vor der Digitalisierung produzierte ein Architekturbüro unzählige Akten in Papierform. In manchen Fällen entsorgen die Urheber selbst noch im hohen Alter wertvolles Material ohne den Wert der eigenen Arbeit in einem weiteren Kontext einschätzen zu können. Schnell wird voreilig etwas weggeworfen oder geschreddert…So geht oft wertvolles historisches Material verloren. Daher biete ich archivische Bewertung und Beratung zum Umgang von Nachlässen im Zusammenhang mit Architektur.</p> 
 	 	<p class="w3-justify">Oft ist die nachfolgende Generation mit der Masse an Dokumenten überfordert oder braucht neue Lagerfläche. Nicht selten hängt dabei ein emotionaler Wert an dem Nachlass, dem sich die Nachfahren gegenüber verpflichtet fühlen. Sie wissen nicht wohin mit einem Nachlass aus der Baubranche? Sie wünschen Ihre Familiengeschichte aufzuarbeiten und für zukünftige Generationen zu sichern bzw. bekannter zu machen? Mit einem bewussten Umgang eines Nachlasses können Sie beispielsweise durch Übergabe an ein öffentliches Archiv auch Forschenden ermöglichen einen Teil unbekannter Architekturgeschichte zu entdecken.</p>
     	<p class="w3-justify">Bevor eine Nachlassbewertung stattfinden kann, sollten Sie sich über folgende Fragen Gedanken machen und im Idealfall erste Auskunft darüber geben können:</p>
@@ -282,6 +288,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
