--- a/angebote.html
+++ b/angebote.html
@@ -186,6 +186,7 @@
 	<img src="img/historisch.jpg" alt="historisch" style="width:100%">
 	<div class="w3-display-bottomright w3-padding-medium w3-opacity w3-white"> Foto: Apostolos Malamoussis
   	</div>
+	</div>
 		<h3 class="w3-left-align">Historische Forschung</h3>
 		<p class="w3-justify">Sie wollen mehr über die Geschichte eines Bauwerkes erfahren als Grundlage für eine Sanierung? Oder möchten Sie das Gebäude (Kirche, Firmensitz, Wohnhaus...) einem breiteren Publikum vorstellen? Oder seine Geschichte für die Nachwelt festhalten und damit für seine Erhaltung sorgen?</p> 
 		<p class="w3-justify">Für meine Quellen suche ich neben dokumentarischem Material auch bewusst Gespräche mit Zeitzeugen. Aussagen - soweit möglich - werden geprüft und oft sind sie die entscheidenden Puzzlestücke, um ein Gebäude aufzuschlüsseln. Wie lebt es sich in dem Gebäude? Welche Probleme gab und gibt es? Wer waren die entscheidenden Akteure bei der Errichtung?
@@ -205,7 +206,8 @@ Dies führte mich immer zu sehr wertvollen Begegnungen, die über die Forschung 
 			
 			<div class="w3-display-container" style="width:100%">
 		<h3 class="w3-left-align">Nachlass & Provinienz</h3>
-		 <div class="w3-panel w3-leftbar w3-light-grey">
+		<p class="w3-justify">Ich biete Nachlassbewertung für Architekturbüros und Privatpersonen sowie Provinienzforschung an.</p>
+				<div class="w3-panel w3-leftbar w3-light-grey">
   <p class="w3-xlarge w3-serif">
   <i>«Wie Objekte weitergegeben werden, hat mit Geschichtenerzählen zu tun. Ich gebe dir das, weil ich dich liebe. Oder weil man es mir gegeben hat. […] Weil du darauf achtgeben wirst. Weil es dein Leben komplizieren wird. Vermächtnisse erzählen keine einfachen Geschichten. Woran erinnert man sich, was wird vergessen?»
 </i></p>
@@ -288,6 +290,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
