--- a/angebote.html
+++ b/angebote.html
@@ -214,39 +214,20 @@ Dies führte mich immer zu sehr wertvollen Begegnungen, die über die Forschung 
   <p>Edmund de Waal, Der Hase mit den Bernsteinaugen, Wien 2011, S. 26.</p>
 </div> 
 		<p class="w3-justify">Haben Sie schon einmal alte Gegenstände gefragt: "Warum bist du bei <i>mir</i>?"</p>
-	 	<p class="w3-justify">Vor der Digitalisierung produzierte ein Architekturbüro unzählige Akten in Papierform. In manchen Fällen entsorgen die Urheber selbst noch im hohen Alter wertvolles Material ohne den Wert der eigenen Arbeit in einem weiteren Kontext einschätzen zu können. Schnell wird voreilig etwas weggeworfen oder geschreddert…So geht oft wertvolles historisches Material verloren. Daher biete ich archivische Bewertung und Beratung zum Umgang von Nachlässen im Zusammenhang mit Architektur.</p> 
-	 	<p class="w3-justify">Oft ist die nachfolgende Generation mit der Masse an Dokumenten überfordert oder braucht neue Lagerfläche. Nicht selten hängt dabei ein emotionaler Wert an dem Nachlass, dem sich die Nachfahren gegenüber verpflichtet fühlen. Sie wissen nicht wohin mit einem Nachlass aus der Baubranche? Sie wünschen Ihre Familiengeschichte aufzuarbeiten und für zukünftige Generationen zu sichern bzw. bekannter zu machen? Mit einem bewussten Umgang eines Nachlasses können Sie beispielsweise durch Übergabe an ein öffentliches Archiv auch Forschenden ermöglichen einen Teil unbekannter Architekturgeschichte zu entdecken.</p>
-    	<p class="w3-justify">Bevor eine Nachlassbewertung stattfinden kann, sollten Sie sich über folgende Fragen Gedanken machen und im Idealfall erste Auskunft darüber geben können:</p>
+	 	<p class="w3-justify">Die Wege von Gegenständen über Jahrzehnte sind manchmal unergründlich, doch mit etwas Geschick dennoch rückverfolgbar. Gerne begleite ich Sie dabei einen Nachlass zu bewerten und ggf. ein passendes Archiv für die langfristige Aufbewahrung zu finden, damit auch zukünftige Generationen profitieren und wertschätzen können.</p>
+		<p class="w3-justify">Speziell im Fall von Architekturbüros produzierten die Mitarbeitenden vor der Digitalisierung unzählige Akten in Papierform. In manchen Fällen entsorgen die Urheber selbst noch im hohen Alter wertvolles Material ohne den Wert der eigenen Arbeit in einem weiteren Kontext einschätzen zu können. Schnell wird voreilig etwas weggeworfen oder geschreddert…So geht oft wertvolles historisches Material verloren.</p> 
+	 	<p class="w3-justify">Oft ist die nachfolgende Generation mit der Masse an Dokumenten überfordert oder braucht neue Lagerfläche. Manchmal steht jemand auch vor einem einzigen Gemälde und weiss nicht, <i>ob das Kunst ist oder weg kann</i>. Nicht selten hängt dabei ein emotionaler Wert an dem Nachlass, dem sich die Nachfahren gegenüber verpflichtet fühlen. Sie wissen nicht wohin mit einem Nachlass aus der Baubranche? Sie wünschen Ihre Familiengeschichte aufzuarbeiten und für zukünftige Generationen zu sichern bzw. bekannter zu machen und mit dem Wissen den Wert eines Objektes damit zu steigern?.</p>
+    	<p class="w3-justify">Machen Sie sich ein paar erste Gedanken:</p>
 	 <ul class="w3-left-align">
 		<li>Von wem stammt der Nachlass? Einzelperson oder Gemeinschaftsbüro?</li>
-		<li>Sind alle erbrechtlichen Fragen geklärt? Sie müssen sicherstellen, dass Sie der rechtmäßige Eigentümer der Unterlagen sind.</li>
-		<li>Wie groß ist der Umfang des Nachlasses? Angabe in Ordner-Anzahl oder Anzahl der Kisten unter Angabe der Größe einer Kiste</li>
-		<li>Um was für Unterlagen handelt es sich? Arten der Unterlagen: A4 Dokumente, Planzeichnungen (von Hand oder CAD gedruckt, Papier oder Skizzenpaper). Gerade Skizzenpapier wird im Alter gerne trocken und teilweise brüchig – dies Bedarf besonderer Vorsicht beim Öffnen von Planrollen</li>
-		<li>Soll der Nachlass als Ganzes zusammen bleiben oder sind Teilnachlässe denkbar?</li>
-	</ul> 
-	
-	<p class="w3-justify">Bei einer Abschätzung des Umfangs sollten Sie beachten:</p>
-	<ul class="w3-left-align">
-		<li>Es kann auch alltäglicher Schriftverkehr erhaltenswert sein, jedoch sich Archive in der Regel nicht an einer Übernahme von Bankauszügen, Personalakten oder privatem Schriftverkehr innerhalb der Familie interessiert</li>
-		<li>Verträge mit Bauherren können u.a. noch mit Urheberrecht verbunden sein und sollten – je nach Interesse – besser in Familienhand bleiben</li>
-	</ul> 
-	<h3 class="w3-left-align">Basis-Paket</h3>
-	 <p class="w3-justify">Dieses Angebot ist für Sie attraktiv, wenn Sie eine erste Orientierung suchen.</p>
-	 <ul class="w3-left-align">
-		<li>2 x Beratungsgespräch à 45min</li>
-		<li>Erstellung eines Kurzberichtes über den Nachlass auf Basis der von Ihnen zur Verfügung gestellten Informationen (über Umfang, Zustand, historische Einordnung), der für die Kontaktaufnahme mit Archiven und anschließende Gespräche als Grundlage dienen kann.
-		Dabei erfolgt die Materialsichtung über den Erben selbst, Sie stellen mir lediglich aussagekräftige Stichproben per Handyfotos jedes Dokumenttyps zur Verfügung.</li>
-		<li>Liste für den spezifischen Fall in Frage kommender Archive, die für eine Übernahme kontaktiert werden können </li>
-	</ul> 
-	<h3 class="w3-left-align">Erweiterte Nachlassbewertung (auf Anfrage)</h3>
-	<p class="w3-justify">Dieses Angebot ist für Sie attraktiv, wenn Sie mittelfristig den Nachlass weitergeben möchten.</p>
-	 <ul class="w3-left-align">
-		<li>3 x Beratungsgespräch à 45min</li>
-		<li>Erstellung eines ausführlichen Bestandsberichtes durch Materialsichtung vor Ort: Sichtung (je nach Umfang) des möglichst gesamten Materials durch die Expertin, pauschale Anfahrtsentschädigung.</li>
-		<li>Kontaktaufnahme mit Archiven auf Basis des ausführlichen Bestandsberichtes. Eine garantierte Übernahme des Nachlasses kann dabei nicht gewährleistet werden, denn es liegt im Ermessen jedes Archivs einen Nachlass aufzunehmen. Gleichzeitig müssen die Erben den Bedingungen eines interessierten Archives zustimmen.</li>
+		<li>Sind alle erbrechtlichen Fragen geklärt? Wem gehört das Eigentum rechtmäßig?</li>
+		<li>Wie groß ist der Umfang des Nachlasses?</li>
+		<li>Bei Architekturnachlässen: Um was für Unterlagen handelt es sich? Beispielsweise Dokumente, Planzeichnungen (von Hand oder CAD gedruckt, Papier oder Skizzenpaper). Gerade Skizzenpapier wird im Alter gerne trocken und teilweise brüchig – dies Bedarf besonderer Vorsicht beim Öffnen von Planrollen!</li>
 	</ul> 
 	
 	<h3 class="w3-left-align">Referenzen</h3>
+	<p class="w3-justify">2025 Provinienzforschung eines Ölgemäldes um 1900. Erstellung eines Familienstammbaumes der 9. Generationen zurückverfolgt und die vorherigen Besitzenden und damit den bisherigen Weg des Gemäldes aufzeigt.</p>
+	<p class="w3-justify">2025 Sichtung einer Dia-Sammlung aus einem Privathaushalt - Vermittlung an ein Museum im Ausland. Derzeit am Laufen.</p>
 	<p class="w3-justify">2022-2023 war ich bei der Sichtung des umfangreiche Teilnachlasses eines namhaften Architekten aus dem süddeutschen Raum beteiligt. Dabei vermittelte ich den Erben Gespräche mit einem grossen Universitätsarchiv. Es kam zur Einigung und der Nachlass wurde ins Archiv überführt.</p>
 	<p class="w3-justify">2023 wurde mir ein Skizzenbuch eines wenig bekannten Architekten anvertraut, das ich zu einem bereits vorhandenen Teilnachlass eines Gemeindearchivs vermitteln konnte.</p>
 	</div>
@@ -291,6 +272,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
