--- a/angebote.html
+++ b/angebote.html
@@ -215,7 +215,7 @@ Dies führte mich immer zu sehr wertvollen Begegnungen, die über die Forschung 
 </div> 
 		<p class="w3-justify">Haben Sie schon einmal alte Gegenstände gefragt: "Warum bist du bei <i>mir</i>?"</p>
 	 	<p class="w3-justify">Die Wege von Gegenständen über Jahrzehnte sind manchmal unergründlich, doch mit etwas Geschick dennoch rückverfolgbar. Gerne begleite ich Sie dabei einen Nachlass zu bewerten und ggf. ein passendes Archiv für die langfristige Aufbewahrung zu finden, damit auch zukünftige Generationen profitieren und wertschätzen können.</p>
-		<p class="w3-justify">Speziell im Fall von Architekturbüros produzierten die Mitarbeitenden vor der Digitalisierung unzählige Akten in Papierform. In manchen Fällen entsorgen die Urheber selbst noch im hohen Alter wertvolles Material ohne den Wert der eigenen Arbeit in einem weiteren Kontext einschätzen zu können. Schnell wird voreilig etwas weggeworfen oder geschreddert…So geht oft wertvolles historisches Material verloren.</p> 
+		<p class="w3-justify">Speziell im Fall von Architekturbüros produzierten die Mitarbeitenden vor der Digitalisierung unzählige Akten in Papierform. In manchen Fällen entsorgen die Urheber selbst noch im hohen Alter wertvolles Material ohne den Wert der eigenen Arbeit in einem weiteren Kontext einschätzen zu können. Schnell wird voreilig etwas weggeworfen oder geschreddert…So geht wertvolles historisches Material verloren.</p> 
 	 	<p class="w3-justify">Oft ist die nachfolgende Generation mit der Masse an Dokumenten überfordert oder braucht neue Lagerfläche. Manchmal steht jemand auch vor einem einzigen Gemälde und weiss nicht, <i>ob das Kunst ist oder weg kann</i>. Nicht selten hängt dabei ein emotionaler Wert an dem Nachlass, dem sich die Nachfahren gegenüber verpflichtet fühlen. Sie wissen nicht wohin mit einem Nachlass aus der Baubranche? Sie wünschen Ihre Familiengeschichte aufzuarbeiten und für zukünftige Generationen zu sichern bzw. bekannter zu machen und mit dem Wissen den Wert eines Objektes damit zu steigern?.</p>
     	<p class="w3-justify">Machen Sie sich ein paar erste Gedanken:</p>
 	 <ul class="w3-left-align">
@@ -272,6 +272,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
