--- a/angebote.html
+++ b/angebote.html
@@ -228,7 +228,8 @@ Dies führte mich immer zu sehr wertvollen Begegnungen, die über die Forschung 
 	
 	<h3 class="w3-left-align">Referenzen</h3>
 	<p class="w3-justify">2025 Provinienzforschung eines Ölgemäldes um 1900. Erstellung eines Familienstammbaumes der 9. Generationen zurückverfolgt und die vorherigen Besitzenden und damit den bisherigen Weg des Gemäldes aufzeigt.</p>
-	<p class="w3-justify">2025 Sichtung einer Dia-Sammlung aus einem Privathaushalt - Vermittlung an ein Museum im Ausland. Derzeit am Laufen.</p>
+	<p class="w3-justify">2025 Sichtung einer Dia-Sammlung aus einem Privathaushalt - Vermittlung an ein Museum im Ausland.</p>
+	<p class="w3-justify">2023-2026 Publikation zu einem öffentlichen Bauwerk mit einer Dia-Sammlung eines namhaften Architekten.</p>
 	<p class="w3-justify">2022-2023 war ich bei der Sichtung des umfangreiche Teilnachlasses eines namhaften Architekten aus dem süddeutschen Raum beteiligt. Dabei vermittelte ich den Erben Gespräche mit einem grossen Universitätsarchiv. Es kam zur Einigung und der Nachlass wurde ins Archiv überführt.</p>
 	<p class="w3-justify">2023 wurde mir ein Skizzenbuch eines wenig bekannten Architekten anvertraut, das ich zu einem bereits vorhandenen Teilnachlass eines Gemeindearchivs vermitteln konnte.</p>
 	</div>
@@ -273,6 +274,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
