--- a/b_steinhausen.html
+++ b/b_steinhausen.html
@@ -116,7 +116,7 @@
 	</header>
 
 <!-- Banner -->
-	<img src="img/tisch.JPG" alt="Strati" style="width:100%">
+	<img src="img/tisch.jpg" alt="Strati" style="width:100%">
 
 <!-- Page content -->
 <div class="w3-container w3-content w3-padding-24" style="max-width:800px" id="start">
@@ -238,6 +238,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
