--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -121,7 +121,8 @@
 
       		</div>
 		<!-- Button jetzt Bestellen --> 
-      	 <a class="w3-button w3-khaki w3-margin-top fixed-button" href="https://architechne.ch/" target="_blank">Jetzt Bestellen!</a>
+      	 <a class="w3-button w3-khaki w3-margin-top fixed-button" href="https://architechne.ch/" target="_blank">Jetzt Bestellen! (EU)</a>
+		<a class="w3-button w3-khaki w3-margin-top fixed-button" href="https://www.ricardo.ch/de/a/kinderbuch-'mein-neues-altes-haus'-1310715014/" target="_blank">Jetzt Bestellen! (CH)</a>
       	 <a class="w3-button w3-blue-gray w3-margin-top fixed-button" href="https://architechne.ch/meinneuesalteshaus.html" target="_blank">Mehr Informationen</a>
         </div>
     </div>
@@ -134,6 +135,8 @@
 </p>
 	<p class="w3-justify">Mit Texten und Typografie von Korinna Zinovia Weber und handgemalten Illustrationen von Meruert Zharekesheva.
 </p><br>
+
+	 
 
 <!-- Slideshow -->	 
   <div class="w3-content w3-display-container">
@@ -257,4 +260,5 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
