--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -122,7 +122,7 @@
       		</div>
 		<!-- Button jetzt Bestellen --> 
       	 <a class="w3-button w3-khaki w3-margin-top fixed-button" href="https://architechne.ch/" target="_blank">Jetzt Bestellen! (EU)</a>
-		<a class="w3-button w3-khaki w3-margin-top fixed-button" href="https://www.ricardo.ch/de/a/kinderbuch-'mein-neues-altes-haus'-1310715014/" target="_blank">Jetzt Bestellen! (CH)</a>
+		<a class="w3-button w3-orange w3-margin-top fixed-button" href="https://www.ricardo.ch/de/a/kinderbuch-'mein-neues-altes-haus'-1310715014/" target="_blank">Jetzt Bestellen bei Ricardo! (CH)</a>
       	 <a class="w3-button w3-blue-gray w3-margin-top fixed-button" href="https://architechne.ch/meinneuesalteshaus.html" target="_blank">Mehr Informationen</a>
         </div>
     </div>
@@ -260,5 +260,6 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
