--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -115,7 +115,7 @@
       	<div class="book-title">Mein NEUES altes Haus - eine Geschichte für Kinder über Umbau statt Neubau.</div>
 			<div class="book-details">
 			     Korinna Zinovia Weber, Meruert Zharekesheva<br>
-			     Architechne, Print-on-demand, 2024<br>
+			     Architechne, 21 x 21 cm, Print-on-demand, 2024<br>
            20 feste Seiten für kleine Hände<br>
            Deutsch, French, English, Greek, Hungarian, Dutch, Italian<br>
 
@@ -260,6 +260,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
