--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -36,7 +36,7 @@
 </header>
 
 <!-- Banner -->
-<img src="img/portrait.jpg" alt="Strati" style="width:100%">
+<img src="img/lesende.jpg" alt="Strati" style="width:100%">
 <img src="img/logo.png" alt="logo" style="width:10%; opacity:0.3; position:fixed; right:0; top:100px" class="w3-hover-opacity">
 <!-- Start -->
   
@@ -147,6 +147,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
