--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -37,6 +37,8 @@
 
 <!-- Banner -->
 <img src="img/lesende.jpg" alt="Strati" style="width:100%">
+	<div class="w3-display-bottomright w3-padding-medium w3-opacity w3-white"> La Liseuse...Photo: Joa Mauduech
+  </div>
 <img src="img/logo.png" alt="logo" style="width:10%; opacity:0.3; position:fixed; right:0; top:100px" class="w3-hover-opacity">
 <!-- Start -->
   
@@ -147,6 +149,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
