--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -62,6 +62,10 @@
     <h3 class="w3-left-align">Stationen aus dem Lebenslauf</h3>
 
 	<p class="w3-justify">2023-2024</p>
+	<p class="w3-justify"><b>ETH Zürich, Schweiz</b>: Projektleitung Works Webseite - digitale Ausstellung für Masterarbeiten</p>
+	<p style="color:cadetblue">Neugestaltung der Works Webseite zusammen mit Bänziger Hug Design. Schaut mal vorbei <a href:"https://works.arch.ethz.ch/">auf Works</a></p>
+		
+	<p class="w3-justify">2023-2024</p>
 	<p class="w3-justify"><b>Ecole Polytechnique Fédérale de Lausanne, Schweiz</b>: Co-Leitung eines Buchprojektes und wissenschaftliche Mitarbeiterin</p>
 	<p style="color:cadetblue">Mit Essays erweiterter Ausstellungskatalog zu aktuellen Forschungsthemen im Bereich Klimawandel.</p>
 	
@@ -149,6 +153,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
