--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -37,7 +37,7 @@
 
 <!-- Banner -->
 <img src="img/lesende.jpg" alt="Strati" style="width:100%">
-	<div class="w3-display-bottomleft w3-padding-medium w3-opacity w3-white"> La Liseuse...Photo: Joa Mauduech
+	<div class="w3-display-bottomleft w3-padding-medium w3-opacity w3-white"> La Liseuse...à la SCAM, Paris. Photo: Joa Mauduech
   </div>
 <img src="img/logo.png" alt="logo" style="width:10%; opacity:0.3; position:fixed; right:0; top:100px" class="w3-hover-opacity">
 <!-- Start -->
@@ -153,6 +153,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
