--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -157,9 +157,9 @@
 <!-- Mehr zum Buch -->	
  <h3 class="w3-opacity w3-left-align">Mehr zum Buch</h3>
 	
-	<p class="w3-justify">Irgendwo in der Schweiz steht ein vierstöckiges Wohnhaus mit Mansardendach, das 1938 erbaut wurde – eine für seine Zeit typische lokale Architektur. Im Jahr 2023 wurde bekannt gegeben, dass es abgerissen und durch ein neues Gebäude ersetzt werden soll, das ausschließlich winzige Zimmer (9 m²) für Studenten bietet. 
-    Die Entscheidung des Eigentümers überraschte die Bewohner:innen. Einige der Familien waren gerade erst eingezogen, darunter eine junge Familie mit einem Neugeborenen. Während sie gegen die Wohnungsknappheit demonstrierten, schaffte es ihr Fall in die lokalen Zeitungen. 
-    Dieser Abriss ist nur einer von vielen in der Schweiz, aber auch in anderen Ländern, wo die Gentrifizierung die Einheimischen aus ihren Vierteln verdrängt. Dies inspirierte die Autorin Korinna Zinovia Weber, ein Kinderbuch zu diesem Thema zu schreiben:
+	<p class="w3-justify">Irgendwo in der Schweiz stand ein vierstöckiges Wohnhaus mit Mansardendach, das 1938 erbaut wurde – eine für seine Zeit typische lokale Architektur. Im Jahr 2023 wurde bekannt gegeben, dass es abgerissen und durch ein neues Gebäude ersetzt werden sollte mit ausschließlich winzige Zimmer (9 m²) für Studierende. 
+    Die Entscheidung des Eigentümers überraschte die Bewohnerinnen und Bewohner. Einige der Familien waren gerade erst eingezogen, darunter eine junge Familie mit einem Neugeborenen. Während sie gegen die Wohnungsknappheit demonstrierten, schaffte es ihr Fall in die lokalen Zeitungen. 
+    Dieser Abriss ist nur einer von vielen in der Schweiz, aber auch in anderen Ländern, wo die Gentrifizierung die Einheimischen aus ihren Vierteln verdrängt. Dies inspirierte mich ein Kinderbuch zu diesem Thema zu schreiben:
  </p>
 
   <p class="w3-justify"><i>"Ich sah, wie meine Tochter reagierte, als ich ihr erzählte, dass das Haus neben unserem abgerissen werden soll und ihre Freundin deshalb wegziehen muss. Plötzlich wurde mir klar, dass wir mit unseren Kindern nicht genug über 
@@ -260,6 +260,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
