--- a/buecher.html
+++ b/buecher.html
@@ -138,12 +138,20 @@
 	<!-- 1. Artikel -->
 	<div class="w3-third w3-margin-bottom">
         <div class="w3-white w3-card book-panel">
+			<a href="https://www.lukasverlag.com/programm/titel/ungebaut.html">
+			<img src="img/ungebaut.jpg" alt="Transcalar" class="w3-hover-opacity"></a>
+		</div>
+	</div>
+		
+	<!-- 2. Artikel -->
+	<div class="w3-third w3-margin-bottom">
+        <div class="w3-white w3-card book-panel">
 			<a href="https://www.routledge.com/The-Monumental/Loukaki/p/book/9781032857497">
 			<img src="img/monumental.jpg" alt="Transcalar" class="w3-hover-opacity"></a>
 		</div>
 	</div>
 
-	<!-- 2. Artikel -->
+	<!-- 3. Artikel -->
 	<div class="w3-third w3-margin-bottom">
         <div class="w3-white w3-card book-panel">
 			<a href="https://fis.uni-bamberg.de/entities/publication/db0afbc3-6080-462c-9f0b-894380225718">
@@ -151,7 +159,7 @@
 		</div>
 	</div>
 
-	<!-- 3. Artikel -->
+	<!-- 4. Artikel -->
 	<div class="w3-third w3-margin-bottom">
         <div class="w3-white w3-card book-panel">
 			<a href="https://www.icomos.de/hefte-des-deutschen-nationalkomitees.html">
@@ -159,7 +167,7 @@
 		</div>
 	</div>
 
-	<!-- 4. Artikel -->
+	<!-- 5. Artikel -->
 	<div class="w3-third w3-margin-bottom">
         <div class="w3-white w3-card book-panel">
 			<a href="https://www.abebooks.com/FRENCH-ARTISTIC-CULTURE-CENTRAL-EAST-EUROPEAN-MODERN/22761446115/bd">
@@ -195,10 +203,11 @@
 		
 	<!-- Veröffentlichungen -->
   <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="vero">
-    <h3 class="w3-left-align">Veröffentlichungen</h3>
-    
-	<p class="w3-justify">2025<br>Monographie «Les ‘vestiges’ de l’opération Million dans l’oeuvre de Georges Candilis», Paris. <i>Les Editions de la Villette</i></p>
-	<p class="w3-justify">2025<br>Journalistischer Artikel "Von Regeln und Raffinesse - Umbau Mehrfamilienhaus Triemlistrasse in Zürich von Atelier Candrian Meier" in: werk, bauen + wohnen, Heft 10–2025.</p>
+    <h3 class="w3-left-align">Liste der Veröffentlichungen</h3>
+     
+	<p class="w3-justify">2025</p>
+	<p class="w3-justify">Korinna Zinovia Weber, <i>Les ‘vestiges’ de l’opération Million dans l’oeuvre de Georges Candilis</i>, Les Editions de la Villette, Paris, 2025</i></p>
+	<p class="w3-justify">Korinna Zinovia Weber, "Von Regeln und Raffinesse - Umbau Mehrfamilienhaus Triemlistrasse in Zürich von Atelier Candrian Meier" in: werk, bauen + wohnen, Heft 10–2025, pp. 62-64</p>
     <p class="w3-justify">2023<br>Monographie «Die griechisch-orthodoxe Allerheiligenkirche in München - Ein Bauprojekt der Ökumene als kulturelle und geistige Brücke zwischen Ost und West» Kunstverlag Josef Fink, Lindenberg im Allgäu (ISBN: 978-3-95976-457-5) Druckkostenzuschuss durch die Geschwister Boehringer Ingelheim Stiftung für Geisteswissenschaften</p>
 	<p class="w3-justify">2022<br>Artikel « Candilis-Josic-Woods : interdépendance et individualité d’une œuvre collective », in: Kollektiv und Kollaborativ : Positionen gemeinschaftlichen Arbeitens in Architektur und Planung vom 20. Jahrhundert bis zu Gegenwart, Bamberg 2022, DOI : 10.20378/irb-55457</p>
 	<p class="w3-justify">2019-2022<br>11 Reader des Lehrstuhls für Architektur und Konstruktion zur Prüfungsvorbereitung der Studierenden, ETH hochschulinterne Publikationen</p>
@@ -263,6 +272,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
