--- a/buecher.html
+++ b/buecher.html
@@ -139,7 +139,7 @@
 	<div class="w3-third w3-margin-bottom">
         <div class="w3-white w3-card book-panel">
 			<a href="https://www.lukasverlag.com/programm/titel/ungebaut.html">
-			<img src="img/ungebaut.jpg" alt="Transcalar" class="w3-hover-opacity"></a>
+			<img src="img/ungebaut.webp" alt="ungebaut" class="w3-hover-opacity"></a>
 		</div>
 	</div>
 		
@@ -272,6 +272,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
