--- a/buecher.html
+++ b/buecher.html
@@ -205,16 +205,21 @@
   <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="vero">
     <h3 class="w3-left-align">Liste der Veröffentlichungen</h3>
      
+	<p class="w3-justify">2026</p>
+	<p class="w3-justify">Korinna Zinovia Weber, "Unvereinbarte Vorstellungen von Sakralbau: Der Entwurf für eine gr.-orth. Kirche in Nordschwabing München von Friedrich Kurrent", in: Arvid Hansmann, Manuela Klauser, Konstantin Manthey, Marina Wesner (Eds.), Ungebaut …! Sakrale Visionen vom Klassizismus bis zur Gegenwart, Lukas Verlag Berlin 2026 </p>
 	<p class="w3-justify">2025</p>
 	<p class="w3-justify">Korinna Zinovia Weber, <i>Les ‘vestiges’ de l’opération Million dans l’oeuvre de Georges Candilis</i>, Les Editions de la Villette, Paris, 2025</i></p>
 	<p class="w3-justify">Korinna Zinovia Weber, "Von Regeln und Raffinesse - Umbau Mehrfamilienhaus Triemlistrasse in Zürich von Atelier Candrian Meier" in: werk, bauen + wohnen, Heft 10–2025, pp. 62-64</p>
-    <p class="w3-justify">2023<br>Monographie «Die griechisch-orthodoxe Allerheiligenkirche in München - Ein Bauprojekt der Ökumene als kulturelle und geistige Brücke zwischen Ost und West» Kunstverlag Josef Fink, Lindenberg im Allgäu (ISBN: 978-3-95976-457-5) Druckkostenzuschuss durch die Geschwister Boehringer Ingelheim Stiftung für Geisteswissenschaften</p>
-	<p class="w3-justify">2022<br>Artikel « Candilis-Josic-Woods : interdépendance et individualité d’une œuvre collective », in: Kollektiv und Kollaborativ : Positionen gemeinschaftlichen Arbeitens in Architektur und Planung vom 20. Jahrhundert bis zu Gegenwart, Bamberg 2022, DOI : 10.20378/irb-55457</p>
+    <p class="w3-justify">Korinna Zinovia Weber, "Mehrfamilienhaus Triemlistrasse", "Pièce Urbaine C, Plaines-du-Loup", "Cinéma Capitole", "Cité Carl-Vogt", "Ferme protégée", "Hinterrheinsteg Nuign", "Centre de Formation de la Construction", in: Andreas Ruby, Roland Züger (Eds.), Schweizer Architektur Jahrbuch 2025, Park Books Zürich 2025</p>
+	<p class="w3-justify">2023</p>
+	<p class="w3-justify">Korinna Zinovia Weber, <i>Die griechisch-orthodoxe Allerheiligenkirche in München - Ein Bauprojekt der Ökumene als kulturelle und geistige Brücke zwischen Ost und West</i>, Kunstverlag Josef Fink, Lindenberg im Allgäu 2023</p>
+	<p class="w3-justify">2022</p>
+	<p class="w3-justify">Korinna Zinovia Weber, « Candilis-Josic-Woods : interdépendance et individualité d’une œuvre collective », in: Kollektiv und Kollaborativ : Positionen gemeinschaftlichen Arbeitens in Architektur und Planung vom 20. Jahrhundert bis zu Gegenwart, Bamberg 2022, DOI : 10.20378/irb-55457</p>
 	<p class="w3-justify">2019-2022<br>11 Reader des Lehrstuhls für Architektur und Konstruktion zur Prüfungsvorbereitung der Studierenden, ETH hochschulinterne Publikationen</p>
 	<p class="w3-justify">2019<br>Dissertation «Les ‘vestiges’ de l’opération Million dans l’oeuvre de Georges Candilis - Actualités et stratégies de sauvegarde pour un patrimoine de l’habitat économique du second-après guerre» bisher EPFL intern publiziert; DOI : 10.5075/epfl-thesis-7806</p>
 	<p class="w3-justify">2019<br>Artikel «The (anti-)monumentality of post-war social housing» aus dem Konferenzbeitrag für «On Monumentality» der Hellenic Open University hervorgegangen, wird 2024 publiziert</p>
 	<p class="w3-justify">2019<br>Artikel «(Weight)lifting the Olympic Heritage - The “White Elephants” of Athens 2004» gemeinsam mit Margarita Agriantoni, in: Hefte des deutschen Nationalkommitees LXXVI von ICOMOS, Berlin 2021</p>
-    <p class="w3-justify">2015<br>Artikel «Georges Candilis - Architect, Urban Planer and Author with communist ideas in a capitalist world», in:  Ljiljana Kolešnik, Tamara Bjažić Klarin (eds.), French Culture and Central East European Modern Art, Zagreb</p>
+    <p class="w3-justify">2015<br>Artikel «Georges Candilis - Architect, Urban Planer and Author with communist ideas in a capitalist world», in: Ljiljana Kolešnik, Tamara Bjažić Klarin (eds.), French Culture and Central East European Modern Art, Zagreb</p>
 	
 <br>
 	<p class="w3-center"><b>Haben Sie Interesse Ihr eigenes Buchprojekt zu verwirklichen? Gerne begleite ich Sie dabei!</b></p>
@@ -272,6 +277,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
