--- a/buecher.html
+++ b/buecher.html
@@ -209,11 +209,12 @@
 	<p class="w3-justify">Korinna Zinovia Weber, "Unvereinbarte Vorstellungen von Sakralbau: Der Entwurf für eine gr.-orth. Kirche in Nordschwabing München von Friedrich Kurrent", in: Arvid Hansmann, Manuela Klauser, Konstantin Manthey, Marina Wesner (Eds.), Ungebaut …! Sakrale Visionen vom Klassizismus bis zur Gegenwart, Lukas Verlag Berlin 2026 </p>
 	<p class="w3-justify">2025</p>
 	<p class="w3-justify">Korinna Zinovia Weber, <i>Les ‘vestiges’ de l’opération Million dans l’oeuvre de Georges Candilis</i>, Les Editions de la Villette, Paris, 2025</i></p>
+	<p class="w3-justify">Korinna Zinovia Weber, Lou Sophie Dörig, <i>Kirchen- und Begegnungszentrum Chilematt Steinhausen</i>, Kunstverlag Josef Fink, Lindberg im Allgäu, 2025</p> 
 	<p class="w3-justify">Korinna Zinovia Weber, "Von Regeln und Raffinesse - Umbau Mehrfamilienhaus Triemlistrasse in Zürich von Atelier Candrian Meier" in: werk, bauen + wohnen, Heft 10–2025, pp. 62-64</p>
     <p class="w3-justify">Korinna Zinovia Weber, "Mehrfamilienhaus Triemlistrasse", "Pièce Urbaine C, Plaines-du-Loup", "Cinéma Capitole", "Cité Carl-Vogt", "Ferme protégée", "Hinterrheinsteg Nuign", "Centre de Formation de la Construction", in: Andreas Ruby, Roland Züger (Eds.), Schweizer Architektur Jahrbuch 2025, Park Books Zürich 2025</p>
 	<p class="w3-justify">Korinna Zinovia Weber, "Postwar social housing. The (anti-)monumentality of Georges Candilis", in: Argyro Loukaki (Ed.), The Monumental, Routledge, London 2025</p>
 	<p class="w3-justify">2024</p>
-	<p class="w3-justify">Jeffrey Huang, Dieter Dietz, Laura Trazic, Korinna Zinovia Weber (Eds.), <i>Transcalar Prospects, architecture in re/action</i>, Lars Müller Publishers, Zürich 2024 (384 pages) >
+	<p class="w3-justify">Jeffrey Huang, Dieter Dietz, Laura Trazic, Korinna Zinovia Weber (Eds.), <i>Transcalar Prospects, architecture in re/action</i>, Lars Müller Publishers, Zürich 2024</p>
 	<p class="w3-justify">2023</p>
 	<p class="w3-justify">Korinna Zinovia Weber, <i>Die griechisch-orthodoxe Allerheiligenkirche in München - Ein Bauprojekt der Ökumene als kulturelle und geistige Brücke zwischen Ost und West</i>, Kunstverlag Josef Fink, Lindenberg im Allgäu 2023</p>
 	<p class="w3-justify">2022</p>
@@ -280,6 +281,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
