--- a/buecher.html
+++ b/buecher.html
@@ -223,7 +223,7 @@
 	<p class="w3-justify">Korinna Zinovia Weber, <i>Les ‘vestiges’ de l’opération Million dans l’oeuvre de Georges Candilis - Actualités et stratégies de sauvegarde pour un patrimoine de l’habitat économique du second-après guerre</i>, EPFL, Lausanne, 2019 DOI : 10.5075/epfl-thesis-7806</p>
 	<p class="w3-justify">Korinna Zinovia Weber, Margarita Agriantoni, «(Weight)lifting the Olympic Heritage - The “White Elephants” of Athens 2004», in: Hefte des deutschen Nationalkommitees LXXVI von ICOMOS, Berlin 2021</p>
     <p class="w3-justify">2015</p>
-	<p class="w3-justify">Korinna Zinovia Weber, «Georges Candilis - Architect, Urban Planer and Author with communist ideas in a capitalist world», in: Ljiljana Kolešnik, Tamara Bjažić Klarin (eds.), French Culture and Central East European Modern Art, Zagreb</p>
+	<p class="w3-justify">Korinna Zinovia Weber, «Georges Candilis - Architect, Urban Planer and Author with communist ideas in a capitalist world», in: Ljiljana Kolešnik, Tamara Bjažić Klarin (eds.), French Culture and Central East European Modern Art, Zagreb 2015</p>
 	
 <br>
 	<p class="w3-center"><b>Haben Sie Interesse Ihr eigenes Buchprojekt zu verwirklichen? Gerne begleite ich Sie dabei!</b></p>
@@ -281,6 +281,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
