--- a/buecher.html
+++ b/buecher.html
@@ -62,7 +62,7 @@
 </header>
 
 <!-- Image -->
-<img src="img/publi.jpg" alt="Strati" style="width:100%">
+<img src="img/bannerbuecher.jpg" alt="banner" style="width:100%">
 
 <!-- Start -->
   <img src="img/logo.png" alt="logo" style="width:10%; opacity:0.3; position:fixed; right:0; top:100px" class="w3-hover-opacity">
@@ -281,6 +281,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
