--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<div style="padding:16px;">  
         	<p><b>Architektur- und Kunstführer. Kirchen- und Begegnungszentrum Chilematt, Steinhausen</b></p>
         	<p class="w3-opacity">Korinna Zinovia Weber, Lou Sophie Dörig</p>
-        	<p>Der Architektur- und Kunstführer über das Chilematt in Steinhausen erscheint im November 2025. Das Buch soll einen kompakten Einblick und neuen Zugang zum Verständnis des Baus von Ernst Gisel gewähren.</p>
+        	<p>Der kleine Architektur- und Kunstführer über das Chilematt in Steinhausen vermittelt einen kompakten Einblick und neuen Zugang zum Verständnis des Baus von Ernst Gisel.</p>
 			<button class="w3-button w3-khaki w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://kunstverlag-fink.de/titel/steinhausen-ch-kirchen-und-begegnungszentrum-chilematt/">Jetzt bestellen! </button>
 			</div>
 		</div>
@@ -247,6 +247,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
