--- a/index.html
+++ b/index.html
@@ -47,8 +47,6 @@
     <h1 class="w3-wide">Dr. Korinna Zinovia Weber</h1>
 	<h2 class="w3-wide">Bauwerke erforschen, erzählen, verstehen</h2>
 	<p class="w3-wide w3-opacity"> Découvrir l'architecture à travers les mots</p>
-	<h3 class="w3-wide">Expertin für Architektur des 20. Jahrhunderts, proaktive Denkmalpflege und (digitale) Publikationen</h3>
-	<p class="w3-wide w3-opacity"> Spécialiste de l’architecture du XXe siècle, de la conservation proactive du patrimoine et des publications (numériques).</p>
 	</div>
 
 <!-- Page content -->
@@ -174,7 +172,7 @@
 <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="port">
     <h3 class="w3-left-align">Portrait</h3>
 	<p class="w3-justify">
-	Ich bin als Wisseschaftlerin im Bereich Architektur und Denkmalpflege sowie als freiberufliche Autorin tätig. Mich begeistert die Forschung über Architektur und Projekte an ihr Ziel zu bringen. Gerne setze ich mich für die Anerkennung von Gebäuden ein, die nicht unmittelbare Wertschätzung in unserer Gesellschaft erfahren. 
+	Ich bin als Wisseschaftlerin im Bereich Architektur und Denkmalpflege sowie als freiberufliche Autorin tätig. Als Expertin für Architektur des 20. Jahrhunderts setze ich mich für proaktive Denkmalpflege und die Vermittlung von Architektur ein. Mich begeistert die Forschung über Architektur und Projekte an ihr Ziel zu bringen. Gerne setze ich mich für die Anerkennung von Gebäuden ein, die nicht unmittelbare Wertschätzung in unserer Gesellschaft erfahren. 
 	</p>
 
 	<img src="img/pic.jpg" class="w3-circle" alt="Korinna Weber" style="width:300px; margin:auto;">
@@ -233,6 +231,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
