--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <!-- Bücher und Veröffentlichungen -->
   <div class="w3-theme-l1" id="buch">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">Bücher und Veröffentlichungen</h2>
+      <h2 class="w3-wide w3-center">Aktuelle Projekte und Veröffentlichungen</h2>
       <p class="w3-opacity w3-center"><i>Projets actuels et nouvelles publications</i></p><br>
 	  
 	  <p class="w3-justify">Spannende Erkenntnisse und Geschichten über Architektur - für die nächste(n) Generation(en) überliefert.</p>
@@ -115,18 +115,6 @@
 	</div>
 	
 	<!-- Vierte Säule -->
-    <div class="w3-third w3-margin-bottom">
-		<div class="w3-white w3-card" style="padding:0">
-			<a href="b_transcalar.html">
-			<img src="img/Transcalar.jpg" alt="Transcalar" style="width:100%; height:auto;" class="w3-hover-opacity"></a>
-			<div style="padding:16px;">
-			<p><b>Transcalar Prospects in Climate Crisis- architectural research in re/action</b></p>
-        	<p class="w3-opacity">Jeffrey Huang, Dieter Dietz, Laura Trazic, Korinna Zinovia Weber (Eds.)</p>
-        	<p>This book offers a vital compilation of research projects and essays reflecting the investigative efforts at EPFL Architecture.</p>
-            <button class="w3-button w3-khaki w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'"><a href="https://www.lars-mueller-publishers.com/transcalar-prospects-climate-crisis/">Order now!</button></a>
-			</div>
-		</div>
-	</div>
 
 	<!-- Fünfte Säule -->
 	
@@ -231,6 +219,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
