--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -64,10 +64,14 @@
 	<p class="w3-justify">2025-2026</p>
 	<p class="w3-justify"><b>ETH Zürich, Schweiz</b>: Projektleitung Works Webseite - digitale Ausstellung für Masterarbeiten</p>
 	<p style="color:cadetblue">Neugestaltung der Works Webseite zusammen mit Bänziger Hug Design. Schaut mal vorbei <a href="https://works.arch.ethz.ch/">auf Works</a></p>
+
+	<p class="w3-justify">2024-2025</p>
+	<p class="w3-justify"><b>Werk, bauen + wohnen, Schweiz</b>: Redaktion des Schweizer Architektur Jahrbuchs 2025/26</p>
+	<p style="color:cadetblue">Die zweite Ausgabe des SAY auf die Beine Stellen gemeinsam mit Fabian Ruppanner und Roland Züger.</p>
 		
 	<p class="w3-justify">2023-2024</p>
 	<p class="w3-justify"><b>Ecole Polytechnique Fédérale de Lausanne, Schweiz</b>: Co-Leitung eines Buchprojektes und wissenschaftliche Mitarbeiterin</p>
-	<p style="color:cadetblue">Mit Essays erweiterter Ausstellungskatalog zu aktuellen Forschungsthemen im Bereich Klimawandel.</p>
+	<p class="w3-justify" style="color:cadetblue">Mit Essays erweiterter Ausstellungskatalog zu aktuellen Forschungsthemen im Bereich Klimawandel.</p>
 	
 	<p class="w3-justify">2019-2023</p>
 	<p class="w3-justify"><b>Eidgenössische Technische Hochschule Zürich, Schweiz</b>: Wissenschaftliche Mitarbeiterin</p>
@@ -153,6 +157,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
