--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -102,7 +102,7 @@ im Oktober 2023, Druckkosten gefördert durch die Geschwister Boehringer Ingelhe
 
 <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
     <h3 class="w3-left-align">Netzwerk</h3>
-    <p class="w3-justify">Ich arbeite gerne mit Menschen zusammen, mit denen über kurz oder lang wechselseitige Synergien und inspirierende Kooperationen entstehen und pflege ein interdisziplinäres Netzwerk hauptsächlich in München, Paris, Lausanne und Zürich. Hier gibt es Links zu Menschen, die ich uneingeschränkt weiterempfehlen möchte:</p>
+    <p class="w3-justify">Ich arbeite gerne mit Menschen zusammen, mit denen über kurz oder lang wechselseitige Synergien und inspirierende Kooperationen entstehen und pflege ein internationales, interdisziplinäres Netzwerk. Hier gibt es Links zu Menschen, die ich uneingeschränkt weiterempfehlen möchte:</p>
 	<p class="w3-justify">Manuela KLAUSER, Kunsthistorikerin von <a href="https://www.transara.uni-bonn.de/de">TRANSARA</a></p>
 	<p class="w3-justify">Thomas GERSTMEIR, Architekt von <a href="https://gik-a.de">gerstmeir inić kučera architekten</a></p>
 	<p class="w3-justify">Philippe TROYON, Filmemacher von <a href="https://www.imaginem.fr/">Imaginem</a></p>
@@ -157,6 +157,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
