--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 	</div>
 	
 		<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Baufor">
-	<a href="./buecher.html"><button class="w3-button w3-khaki">Mehr über Bücher und Veröffentlichungen</button></a>
+	<a href="./buecher.html"><button class="w3-button w3-khaki">Mehr über Veröffentlichungen</button></a>
 	</div>
 	</div>
 </div>
@@ -150,7 +150,7 @@
 	<p class="w3-justify">Sie wissen nicht wohin mit alten Kisten voller Pläne, Schriftverkehr und Fotos eines Architekturbüros?</p>
 	    <p class="w3-justify">Haben Sie Interesse Ihre Veranstaltung mit einem unterhaltenden Vortrag über Architektur zu bereichern? Dann melden Sie sich gerne bei mir.</p>
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Baufor">
-	<a href="angebote.html"><button class="w3-button w3-blue-grey">Mehr über Vorträge und Beratungsangebote</button></a>
+	<a href="angebote.html"><button class="w3-button w3-blue-grey">Mehr über Angebote</button></a>
 	</div>
 	</div>	
 
@@ -160,7 +160,7 @@
 <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="port">
     <h3 class="w3-left-align">Portrait</h3>
 	<p class="w3-justify">
-	Ich bin als Wisseschaftlerin im Bereich Architektur und Denkmalpflege sowie als freiberufliche Autorin tätig. Als Expertin für Architektur des 20. Jahrhunderts setze ich mich für proaktive Denkmalpflege und die Vermittlung von Architektur ein. Mich begeistert die Forschung über Architektur und Projekte an ihr Ziel zu bringen. Gerne setze ich mich für die Anerkennung von Gebäuden ein, die nicht unmittelbare Wertschätzung in unserer Gesellschaft erfahren. 
+	Ich bin als Wissenschaftlerin im Bereich Architektur und Denkmalpflege sowie als freiberufliche Autorin tätig. Als Expertin für Architektur des 20. Jahrhunderts setze ich mich für proaktive Denkmalpflege und die Vermittlung von Architektur ein. Mich begeistert die Forschung über Architektur und Projekte an ihr Ziel zu bringen. Gerne setze ich mich für die Anerkennung von Gebäuden ein, die nicht unmittelbare Wertschätzung in unserer Gesellschaft erfahren. 
 	</p>
 
 	<img src="img/pic.jpg" class="w3-circle" alt="Korinna Weber" style="width:300px; margin:auto;">
@@ -219,6 +219,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
