--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 	<p class="w3-justify">
 	Ich bin als Wissenschaftlerin im Bereich Architektur und Denkmalpflege sowie als freiberufliche Autorin tätig. Als Expertin für Architektur des 20. Jahrhunderts setze ich mich für proaktive Denkmalpflege und die Vermittlung von Architektur ein. Mich begeistert die Forschung über Architektur und Projekte an ihr Ziel zu bringen. Gerne setze ich mich für die Anerkennung von Gebäuden ein, die nicht unmittelbare Wertschätzung in unserer Gesellschaft erfahren. 
 	</p>
+	<p class="w3-opacity w3-justify">Je suis chercheuse dans le domaine de l’architecture et de la conservation du patrimoine bâti, ainsi qu’autrice indépendante. Spécialiste de l’architecture du XXe siècle, je plaide pour une conservation proactive du patrimoine et pour la médiation de l’architecture. La recherche sur l’architecture et la conduite de projets jusqu’à leur aboutissement me passionnent. Je m’engage volontiers pour la reconnaissance d’édifices qui ne sont pas immédiatement valorisés dans notre société.</p><br>
 
 	<img src="img/pic.jpg" class="w3-circle" alt="Korinna Weber" style="width:300px; margin:auto;">
 </div>
@@ -219,6 +220,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
