--- a/buecher.html
+++ b/buecher.html
@@ -206,7 +206,8 @@
     <h3 class="w3-left-align">Liste der Veröffentlichungen</h3>
      
 	<p class="w3-justify">2026</p>
-	<p class="w3-justify">Korinna Zinovia Weber, "Unvereinbarte Vorstellungen von Sakralbau: Der Entwurf für eine gr.-orth. Kirche in Nordschwabing München von Friedrich Kurrent", in: Arvid Hansmann, Manuela Klauser, Konstantin Manthey, Marina Wesner (Eds.), Ungebaut …! Sakrale Visionen vom Klassizismus bis zur Gegenwart, Lukas Verlag Berlin 2026 </p>
+	<p class="w3-justify">Korinna Zinovia Weber, "Unvereinbarte Vorstellungen von Sakralbau: Der Entwurf für eine gr.-orth. Kirche in Nordschwabing München von Friedrich Kurrent", in: Arvid Hansmann, Manuela Klauser, Konstantin Manthey, Marina Wesner (Eds.), <i>Ungebaut …! Sakrale Visionen vom Klassizismus bis zur Gegenwart, Lukas Verlag Berlin 2026</i></p>
+	<p class="w3-justify">Martin Roesch, Korinna Zinovia Weber, Nicola Graf, "Potential and Limits of Pointclouds as an Architectural Design Tool for Small Sized Historic Monuments Through the Case Study of Modernist Atelier House of Carl and Margrit Roesch in Diessenhofen, Switzerland, in: SAHC 2025, Volume 1, RILEM 64 (forthcoming)</p>
 	<p class="w3-justify">2025</p>
 	<p class="w3-justify">Korinna Zinovia Weber, <i>Les ‘vestiges’ de l’opération Million dans l’oeuvre de Georges Candilis</i>, Les Editions de la Villette, Paris, 2025</i></p>
 	<p class="w3-justify">Korinna Zinovia Weber, Lou Sophie Dörig, <i>Kirchen- und Begegnungszentrum Chilematt Steinhausen</i>, Kunstverlag Josef Fink, Lindberg im Allgäu, 2025</p> 
@@ -281,6 +282,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
